# template

./: .travis.yml  CMakeLists.txt
.github/workflows/: build-and-test.yml
include/: add.hpp
scripts/osx/: build.sh  install-dependencies.sh
scripts/osx/dependencies/: gtest.sh
scripts/windows/: install-dependencies.bat
scripts/windows/dependencies/: gtest.bat
src/: add.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp  test_add.cpp
toolchains/: mingw.cmake
